Refactor BidirectionalTransport with MCP SDK patterns
- Add atomic state machine (DISCONNECTED -> CONNECTING -> CONNECTED -> CLOSING -> CLOSED)
- Add scheduler separation for I/O (inbound, outbound, error schedulers)
- Add Sinks.Many for message buffering with backpressure
- Add volatile isClosing flag for clean shutdown coordination
- Change from Mono.subscribeOn() to scheduler.schedule() for immediate execution
- Add graceful shutdown sequence matching MCP SDK
- Preserve iterator-based API (messageIterator(), messageIterable())
- Add SessionClosedException for closed session operations
- Update tests to use claude-haiku-4-5-20251016 for faster execution